# cf-js-frontend-challenge

./: .gitignore
00-setup-your-test-env/javascript/: package-lock.json
finding-seams/: 1-speaker-feedback.md  2-task-badge-printing.md  3-room-availability.md  4-recap.md  5-schedule-to-text.md  6-reminder-sender.md  README.md  conferece-katas.md  post-session.md
finding-seams/csharp/: FindingSeams.sln  README.md
finding-seams/javascript/: README.md  eslint.config.mjs  package.json
finding-seams/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
finding-seams/python/: README.md  pyproject.toml
finding-seams/python/src/badge_printing/: badge.py  badge_id_generation.py  badge_printing.py
finding-seams/python/src/finding_seams_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
finding-seams/python/src/reminder_sender/: reminder_sender.py  sends_reminders.py
finding-seams/python/src/room_availability/: room_registry.py  room_service.py
finding-seams/python/src/schedule_visualising/: schedule-2025-11-05.json  schedule_formatter.py  schedule_to_text.py
finding-seams/python/src/speaker_feedback/: feedback_sensor.py  speaker_feedback.py
finding-seams/python/test/: test_1_speaker_feedback.py  test_2_badge_printer.py  test_3_room_availability.py  test_5_schedule_to_text.py  test_6_reminder_sender.py
finding-seams/typescript/: README.md  eslint.config.mjs  package.json  tsconfig.json  (+1 more)
frontend/: README.md  cfb-tag.js  how-to.md  index.html  index.js  learning-log.md  styles.css
no-exceptions/: README.md  getting-started.md  learning-log.md
(+280 files in other folders)
